--- a/src/main/resources/templates/confirm.html
+++ b/src/main/resources/templates/confirm.html
@@ -19,7 +19,7 @@
             <div class="collapse navbar-collapse navHeaderCollapse">
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="dashboard" class="navbar-brand">Dashboard</a></li>
-                    <li><a href="form" class="navbar-brand">Form</a></li>
+                    <li><a href="completedForm" class="navbar-brand">Form</a></li>
                     <li><a href='logout' class="navbar-brand">Logout</a></li>
                 </ul>
             </div>
