--- a/src/main/resources/templates/respect-form.html
+++ b/src/main/resources/templates/respect-form.html
@@ -30,7 +30,7 @@
             <div class="collapse navbar-collapse navHeaderCollapse">
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="dashboard" class="navbar-brand">Dashboard</a></li>
-                    <li><a href="completedForm" class="navbar-brand">Form</a></li>
+                    <li><a href="form" class="navbar-brand">Form</a></li>
                     <li th:if="${isAdmin}"><a href="admin" class="navbar-brand">Admin</a></li>
                     <li><a href='logout' class="navbar-brand">Logout</a></li>
                 </ul>
