--- a/src/main/resources/templates/respect-form.html
+++ b/src/main/resources/templates/respect-form.html
@@ -6,8 +6,8 @@
     <link href="http://cdn.jsdelivr.net/webjars/bootstrap/3.3.4/css/bootstrap.min.css"
           th:href="@{/webjars/bootstrap/3.3.6/css/bootstrap.min.css}"
           rel="stylesheet" media="screen" />
-    <link href="../static/css/general.css"
-          th:href="@{css/respect-form.css}" rel="stylesheet" media="screen"/>
+    <link href="/static/css/general.css"
+          th:href="@{/css/general.css}" rel="stylesheet" media="screen"/>
     <link href="https://cdn.jsdelivr.net/jquery.ui/1.11.4/jquery-ui.min.css"
           th:href="@{/webjars/jquery-ui/1.9.2/css/smoothness/jquery-ui-1.9.2.custom.min.css}" rel="stylesheet" media="screen"/>
     <script src="http://cdn.jsdelivr.net/webjars/jquery/2.1.4/jquery.min.js"
