Minor wording change

--- a/src/main/resources/templates/admin-user.html
+++ b/src/main/resources/templates/admin-user.html
@@ -15,7 +15,7 @@
     <center>
         <div class="padded-table-body">
             <div>
-                <h3>Info:</h3>
+                <h3>Account Information</h3>
             </div>
             <div>
                 <span th:text="'Name: ' + ${user.refereeId.firstName} + ' ' + ${user.refereeId.lastName}" />
