Removed duplicate file.  Added padding to users list

--- a/src/main/resources/templates/admin-users.html
+++ b/src/main/resources/templates/admin-users.html
@@ -13,7 +13,10 @@
 </head>
 <body background="/img/paper_2.png">
 <center>
-    <div class="table-body">
+    <div class="padded-table-body">
+        <div>
+            <h3>Users (Sorted By Last Name)</h3>
+        </div>
         <div th:each="user : ${users}">
             <a th:href="'/respect/admin/user/' + ${user.id}" th:text="${user.refereeId.firstName} + ' ' + ${user.refereeId.lastName}"></a>
             <span th:if="${user.approved} == false"> - Account not yet approved!</span>
