Added view all reports for user page.  Fixed sql to make compatible with older versions of postgres

--- a/src/main/resources/static/css/general.css
+++ b/src/main/resources/static/css/general.css
@@ -21,6 +21,11 @@ label.radio {
     margin-top: 10px;
 }
 
+.large-table {
+    margin-right: 2%;
+    margin-left: 2%;
+}
+
 .spacing {
     margin-top: 10px;
 }
